# vst-rs

./: .appveyor.yml  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  aliases.js  appveyor_rust_install.ps1  crates.js  help.html  index.html  osx_vst_bundler.sh  search-index.js  settings.html  source-files.js
.github/workflows/: deploy.yml  docs.yml  rust.yml
examples/: atomic_float.rs  dimension_expander.rs  fwd_midi.rs  gain_effect.rs  ladder_filter.rs  moog_filter.rs  simple_host.rs  sine_synth.rs  transfer_and_smooth.rs
examples/dimension_expander/: Cargo.toml
examples/dimension_expander/src/: lib.rs
examples/sine_synth/: Cargo.toml
examples/sine_synth/src/: lib.rs
examples/sinesynth/src/: lib.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/convert/: trait.From.js  trait.Into.js  trait.TryFrom.js
implementors/num_enum/: trait.TryFromPrimitive.js
src/: api.rs  buffer.rs  cache.rs  channels.rs  editor.rs  enums.rs  event.rs  host.rs  init.rs  interfaces.rs  lib.rs  macros.rs  plugin.rs  prelude.rs
src/util/: atomic_float.rs  mod.rs  parameter_transfer.rs  test_util.rs
src/vst/: api.rs.html  buffer.rs.html  cache.rs.html  channels.rs.html  editor.rs.html  event.rs.html  host.rs.html  interfaces.rs.html  lib.rs.html  plugin.rs.html  prelude.rs.html
tests/: buffer_tests.rs  plugin_tests.rs
vst/: all.html  index.html  macro.plugin_main!.html  macro.plugin_main.html  sidebar-items.js
vst/api/: enum.EventType.html  enum.FileSelectCommand.html  enum.FileSelectType.html  enum.HostLanguage.html  enum.ProcessLevel.html  enum.SmpteFrameRate.html  enum.SpeakerArrangementType.html  enum.Supported.html  index.html  sidebar-items.js  struct.AEffect.html  struct.ChannelFlags.html  struct.ChannelProperties.html  struct.Event.html  struct.Events.html  struct.FileSelect.html  struct.FileType.html  struct.MidiEvent.html  struct.MidiEventFlags.html  struct.ModifierKey.html  struct.PluginFlags.html  struct.SysExEvent.html  struct.TimeInfo.html  struct.TimeInfoFlags.html  type.DispatcherProc.html  type.GetParameterProc.html  type.HostCallbackProc.html  type.PluginMain.html  type.ProcessProc.html  type.ProcessProcF64.html  type.SetParameterProc.html
vst/buffer/: index.html  sidebar-items.js  struct.AudioBuffer.html  struct.AudioBufferIterator.html  struct.InputIterator.html  struct.Inputs.html  struct.OutputIterator.html  struct.Outputs.html  struct.SendEventBuffer.html  trait.WriteIntoPlaceholder.html  type.PlaceholderEvent.html
vst/channels/: enum.ArrangementTarget.html  enum.SpeakerArrangementType.html  enum.StereoChannel.html  enum.StereoConfig.html  enum.SurroundConfig.html  index.html  sidebar-items.js  struct.ChannelInfo.html
vst/editor/: enum.Key.html  enum.KnobMode.html  index.html  sidebar-items.js  struct.KeyCode.html  trait.Editor.html
vst/event/: enum.Event.html  index.html  sidebar-items.js  struct.MidiEvent.html  struct.SysExEvent.html
vst/host/: enum.PluginLoadError.html  index.html  sidebar-items.js  struct.HostBuffer.html  struct.PluginInstance.html  struct.PluginLoader.html  trait.Host.html
vst/plugin/: enum.CanDo.html  enum.Category.html  index.html  sidebar-items.js  struct.HostCallback.html  struct.Info.html  trait.Plugin.html  trait.PluginParameters.html
vst/prelude/: index.html
vst/util/: index.html  sidebar-items.js  struct.AtomicFloat.html  struct.ParameterTransfer.html  struct.ParameterTransferIterator.html
(+54 files in other folders)
