[package]
name = "vst"
version = "0.0.1"
authors = [
	"Marko Mijalkovic <marko.mijalkovic97@gmail.com>",
	"Boscop",
	"Alex Zywicki <alexander.zywicki@gmail.com>",
	"doomy <alexander@resamplr.com>",
	"Ms2ger",
	"Rob Saunders",
	"David Lu",
	"Aske Simon Christensen",
	"kykc",
	"Jordan Earls",
	"xnor104",
	"Nathaniel Theis",
	"Colin Wallace",
	"Henrik Nordvik" ]

description = "VST 2.4 API implementation in rust. Create plugins or hosts."

readme = "README.md"
repository = "https://github.com/rust-dsp/rust-vst"
documentation = "https://rust-dsp.github.io/rust-vst/vst/"

license = "MIT"
keywords = ["vst", "vst2", "plugin"]

[dependencies]
log = "0.3"
num-traits = "0.1"
libc = "0.2"
bitflags = "0.8"
libloading = "0.4"

[dev-dependencies]
time = "0.1"

[features]
nightly = []

[[example]]
name = "dimension_expander"
crate-type = ["cdylib"]

[[example]]
name = "simple_host"
crate-type = ["bin"]

[[example]]
name = "sine_synth"
crate-type = ["cdylib"]

[[example]]
name = "fwd_midi"
crate-type = ["cdylib"]
