[package]
name = "vst"
version = "0.1.0"
authors = [
	"Marko Mijalkovic <marko.mijalkovic97@gmail.com>",
	"Boscop",
	"Alex Zywicki <alexander.zywicki@gmail.com>",
	"doomy <alexander@resamplr.com>",
	"Ms2ger",
	"Rob Saunders",
	"David Lu",
	"Aske Simon Christensen",
	"kykc",
	"Jordan Earls",
	"xnor104",
	"Nathaniel Theis",
	"Colin Wallace",
	"Henrik Nordvik" ]

description = "VST 2.4 API implementation in rust. Create plugins or hosts."

readme = "README.md"
repository = "https://github.com/rust-dsp/rust-vst"
documentation = "https://rust-dsp.github.io/rust-vst/vst/"

license = "MIT"
keywords = ["vst", "vst2", "plugin"]

autoexamples = false

[dependencies]
log = "0.4"
num-traits = "0.2"
libc = "0.2"
bitflags = "1"
libloading = "0.5"

[dev-dependencies]
time = "0.1"
rand = "0.6.5"

[[example]]
name = "dimension_expander"
crate-type = ["cdylib"]

[[example]]
name = "simple_host"
crate-type = ["bin"]

[[example]]
name = "sine_synth"
crate-type = ["cdylib"]

[[example]]
name = "fwd_midi"
crate-type = ["cdylib"]

[[example]]
name = "gain_effect"
crate-type = ["cdylib"]

[[example]]
name = "transfer_and_smooth"
crate-type = ["cdylib"]
