[package]
name = "vst"
version = "0.4.0"
edition = "2021"
authors = [
	"Marko Mijalkovic <marko.mijalkovic97@gmail.com>",
	"Boscop",
	"Alex Zywicki <alexander.zywicki@gmail.com>",
	"doomy <notdoomy@protonmail.com>",
	"Ms2ger",
	"Rob Saunders",
	"David Lu",
	"Aske Simon Christensen",
	"kykc",
	"Jordan Earls",
	"xnor104",
	"Nathaniel Theis",
	"Colin Wallace",
	"Henrik Nordvik",
	"Charles Saracco",
	"Frederik Halkjær" ]

description = "VST 2.4 API implementation in rust. Create plugins or hosts."

readme = "README.md"
repository = "https://github.com/rustaudio/vst-rs"

license = "MIT"
keywords = ["vst", "vst2", "plugin"]

autoexamples = false

[features]
default = []
disable_deprecation_warning = []

[dependencies]
log = "0.4"
num-traits = "0.2"
libc = "0.2"
bitflags = "1"
libloading = "0.7"
num_enum = "0.5.2"

[dev-dependencies]
rand = "0.8"

[[example]]
name = "dimension_expander"
crate-type = ["cdylib"]

[[example]]
name = "simple_host"
crate-type = ["bin"]

[[example]]
name = "sine_synth"
crate-type = ["cdylib"]

[[example]]
name = "fwd_midi"
crate-type = ["cdylib"]

[[example]]
name = "gain_effect"
crate-type = ["cdylib"]

[[example]]
name = "transfer_and_smooth"
crate-type = ["cdylib"]

[[example]]
name = "ladder_filter"
crate-type = ["cdylib"]

